--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack -d",
-    "devserver": "webpack-dev-server --history-api-fallback --debug --devtool eval-source-map --output-pathinfo --hot --inline --watch"
+    "devserver": "webpack-dev-server --history-api-fallback --debug --devtool eval-source-map --output-pathinfo --hot --inline --watch",
+    "server": "nodemon server/server.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,10 @@
   "dependencies": {
     "axios": "^0.11.1",
     "babel-polyfill": "^6.9.1",
+    "body-parser": "^1.15.2",
+    "express-history-api-fallback": "^2.1.0",
     "font-awesome": "^4.6.3",
+    "mongoose": "^4.7.4",
     "query-string": "^4.2.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -44,6 +48,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.22.0",
     "eslint": "^2.13.1",
