--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "simple-redux-kit",
+  "name": "redux-social",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack -d",
+    "build": "webpack -d --watch",
     "devserver": "webpack-dev-server --history-api-fallback --debug --devtool eval-source-map --output-pathinfo --hot --inline --watch",
     "server": "nodemon server/server.js --exec babel-node --presets es2015,stage-2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Noxwille/simple-redux-kit.git"
   },
   "keywords": [
     "React",
@@ -18,24 +14,25 @@
     "Webpack",
     "ES2015"
   ],
-  "author": "Bogdan Pohasii",
+  "author": "Lakutin Andrey",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Noxwille/simple-redux-kit/issues"
-  },
-  "homepage": "https://github.com/Noxwille/simple-redux-kit#readme",
   "dependencies": {
     "axios": "^0.11.1",
     "babel-polyfill": "^6.9.1",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "client-sessions": "^0.7.0",
+    "csurf": "^1.9.0",
     "express-history-api-fallback": "^2.1.0",
     "font-awesome": "^4.6.3",
+    "material-ui": "^0.16.5",
     "mongoose": "^4.7.4",
     "query-string": "^4.2.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   },
