--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-router": "^2.5.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
+    "redux-form": "^6.4.1",
+    "redux-form-material-ui": "^4.1.2",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
@@ -58,7 +60,7 @@
     "html-webpack-plugin": "^1.7.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.1.1",
     "resolve-url-loader": "^1.6.0",
